# datavis-marno

./: .gitignore  pyproject.toml
data/processed/: wdi_cleaned.csv
notebooks/: cleaning.ipynb  test.ipynb  visualize.ipynb
